--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "framer-motion": "^11.15.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.3",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.12.0",
     "zustand": "^5.0.2"
